Update: payment statement and prepare
